css/styles.css
@import url('./var.css');

/* Header */
header {
    margin-top: 70px;
}
header .nav {
    background-color: var(--white);
    display: flex;
    flex-direction: row ;
    width: 100%;
    height: 70px;
    padding: 5px;
    /* border: 1px solid var(--grey); */
    /* margin: 2px; */
    border-radius: 2px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}

.nav-linkedin-icon {
    width: 27px;
    height: 27px;
    margin: 18px 5px;
}
/*Input header*/

.nav-search {
    display: flex;
    width: 150px;
    height: 40px;
    border: 1px solid var(--black);
    margin-top: 12px;
    border-radius: 5px;
    padding: 5px;
    align-items: center;
}

.nav-search input {
    width: 65%;
    outline: none;
    border: none;
}
.nav-search-icon {
    background-image: url('https://cdn0.iconfinder.com/data/icons/google-material-design-3-0/48/ic_search_48px-512.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-color: var(--white);
    width: 20px;
    height: 20px;
    justify-self: center;
    margin-right: 5px;
}

/* User image */

.nav-image {
    display: flex;
    justify-content: end;
    min-width: 80px;
    width: 37%;
    /* border: 1px solid black; */
    padding: 5px;
    place-content: end;
    height: 90%;
    margin-top: 5px;
}

.nav-image_content {
    width: 27px;
    min-width: 25px;
    height: 27px;
    place-self: center;
    border-radius: 49.9%;
    display: inline-block;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    border: 0.5px solid var(--grey);
}

/* Character section */

.card-character {
    display: grid;
    grid-template-columns: 100%;
    grid-auto-rows: repeat(100px 50px 3fr);
    margin: 10px 0px;
    /* box-shadow: 0px -5px 1px 0px rgb(0 0 0 / 20%) */
}
.port-photo img {
    width: 100%;
    height: 80%;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.profile-image {
    width: 130px;
    height: 130px;
    border: 2px solid #fff;
    margin: -87px 0 14px;
    border-radius: 100%;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 20%);

    /* * Medidas del relative */
    position: relative;
    top: 20%;
    margin-left: 10px;
} 

.card-character p {
    justify-self: initial;
    margin-left: 12px;
    /*  */
}
.character-name {
    font-size: 3rem;
    font-weight: 500;
}
.character-type {
    font-size: 2rem;
    color: var(--black);
}
.character-location {
    font-size: 2rem;
    color: var(--grey);
}
.character-info {
    font-size: 2rem;
    color: var(--grey);
    margin-bottom: 15px;
}

/* Button to refresh characters */

.btn-refresh {
    /* * Container */
    background-color: var(--blue-lk);
    display: flex;
    width: 90%;
    height: 45px;
    /* * Foint */
    color: var(--white);
    font-weight: 600;
    font-size: 1.5rem;
    /* * Other */
    justify-content: center;
    place-items: center;
    border-radius: 25px;
    border: none;
    margin: 0 auto;
    margin-bottom: 100px;
}

/* Links sections */

